--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ main {
   background-color: #92C9D5;
   width: 100%;
   height: 100%;
+  display: flex;
 }
 
 footer {
@@ -32,4 +33,5 @@ footer {
   width: 100px;
   height: 100px;
   margin: 5px;
+  background-color: #FCF2EC;
 }
