Automatically backed up by Learn

--- a/index.css
+++ b/index.css
@@ -8,7 +8,6 @@ header {
   background-color: #FBFFF4;
   height: 80px;
   width: 100%;
-  flex-shrink: 0;
 }
 
 main {
@@ -23,7 +22,6 @@ footer {
   background-color: #DAEEEF;
   height: 80px;
   width: 100%;
-  flex-shrink: 3;
 }
 
 .flex-container {
@@ -42,4 +40,7 @@ footer {
   .setWidth {
   flex-basis: 100px;
   flex-grow: 1;
+}
+.align-self {
+  align-self: flex-end;
 }
